Ajuste das funcionalidades de plotagem atraves do dialog.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">EstudoMap</string>
+    <string name="longitude">Longitude</string>
+    <string name="azimute">Azimute</string>
+    <string name="raio">Raio em metros</string>
+    <string name="latitude">Latitude</string>
 </resources>
