--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">EstudoMap</string>
+    <string name="app_name">Erb
+        Azimuth</string>
     <string name="longitude">Longitude</string>
     <string name="azimute">Azimute</string>
     <string name="raio">Raio em metros</string>
